--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,34 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 8px;
+  margin: 8px auto;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 12px;
+  margin: 12px auto;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 12px;
+  margin: 12px auto;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 12px;
+  margin: 8px auto;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 16px;
+  margin: auto;
 }
