--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,13 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
+  padding: 10px;
+  margin: 10px;
 }
 
 img {
@@ -7,9 +15,29 @@ img {
   height: 100px;
 }
 
+.flex-c {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 30px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.p1,
+.p2,
+.p3,
+.p4 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 200px;
+  text-align: center;
+  align-items: center;
 }
 
 /* do not edit this footer */
