--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,19 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+a:link, a:visited {
+  color: wheat;
+  text-decoration: none;
+  font-size: 22px;
+}
+
+a:hover, a:active {
+  color: wheat;
+  text-decoration: underline;
+  font-size: 22px;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  font-size: 32px;
+}
+
+.header,
+.footer {
+  display: flex;
+  align-items: center;
+  padding: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  margin-top: auto;
 }
 
 .sidebar {
@@ -26,4 +57,33 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  display: flex;
+  flex-basis: auto;
+  width: 400px;
+}
+
+.exp {
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap: 20px;
+}
+
+.thepage {
+  display: flex;
+  flex-grow: 1;
+}
+
+.sidebar {
+  display: flex;
+  flex-shrink: 0;
+}
+
+.fts {
+  display: flex;
+  padding: 16px;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
 }
